--- a/static/styles/twodsix_basic.css
+++ b/static/styles/twodsix_basic.css
@@ -3198,6 +3198,14 @@ img.item-img {
   padding: 0.5ch;
 }
 
+.flavor-table th {
+  text-align: left;
+}
+
+.flavor-table th.centre {
+    text-align: center;
+}
+
 /* ============================================================================
    SECTION-16: INTERFACE ELEMENTS & BUTTONS
    ============================================================================ */
